bug fix - homepage region dropdown - text wrapping

--- a/app/assets/stylesheets/page/root.scss
+++ b/app/assets/stylesheets/page/root.scss
@@ -750,6 +750,7 @@ main {
     background-color: $filter-bg;
     .select2-results__option{
       @include font(22, 'r', 33);
+      padding-left: 33px;
       &::before{
         display: inline-block;
         content: "";
@@ -760,6 +761,7 @@ main {
         background-size: cover;
         cursor: pointer;
         margin-right: 7px;
+        margin-left: -26px;
       }
       &[aria-selected="true"]{
         &::before{
